css/theme.css
html {
  color: #333;
  font-family: "Alegreya Sans",sans-serif;
}

a {
  color: var(--color-link);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a:focus {
  outline: 3px solid #000;
}

hr {
  border-color: var(--color-grey-light);
  border-width: 3px;
}

code,
pre {
  padding: 0.1em 0.4em;

  border-radius: 3px;
  background-color: var(--color-code);

  font-size: 90%;
  font-family: "Source Code Pro",monospace;
}

code[class*="language-"] {
  display: block;
  overflow-x: auto;
  padding: 0 24px 0 0;
  width: 100%;
}

pre {
  padding: 0.6em 0.8em;
  position: relative;
}

pre::after {
  bottom: 0;
  content: " ";
  position: absolute;
  right: 0.8em;
  top: 0;
  width: 20px;

  background-image: linear-gradient(to right, rgba(245,242,240,0), var(--color-code));
}

.wrapper {
  margin-left: auto;
  margin-right: auto;
  max-width: 40em;
}

.tutorial h2,
.tutorial h3,
.tutorial h4,
.tutorial h5,
.tutorial h6 {

}

.heading-link {
  display: none;
  position: absolute;
  margin-left: -0.6em;

  opacity: 0.4;
  color: var(--color-grey);
  font-weight: normal;
}

.heading-link:hover {
  opacity: 1;
  color: var(--color-link);
  text-decoration: none;
}

.tutorial ul {
  padding: 0;

  list-style: none;
}

.tutorial ul li::before {
  content: "•";
  margin-left: -0.35em;
  position: absolute;

  color: var(--color-grey-dark);
  font-size: 1.5rem;
  line-height: 0.8;
}

.tutorial .list-group > li::before {
  content: none;
}

.tutorial ol {
  padding-left: 1.5em;
}

.tutorial img {
  width: 100%;
  display: block;
}

.tutorial-nav ol {
  margin: 0;
  padding: 0;
}

.tutorial-nav ol ol {
  padding-left: 0.6em;
}

.tutorial-nav > ol > li > ol {
  padding-left: 0;
}

.tutorial-nav > ol > li > a {
  font-weight: bold;
}

.tutorial-nav a {
  display: block;
  padding: 0.1em 0.3em;
}

.tutorial-nav a:hover {
  border-radius: 4px;
  background-color: var(--color-grey-light);
  text-decoration: none;
}

.controls {
  position: relative;

  text-align: center;
}

.controls .btn {
  display: block;
}

.tutorial-footer {
  border-top: 3px solid var(--color-grey-light);
}

@media only screen and (min-width: 38em) {

  .controls .btn {
    display: inline-block;
  }

  .controls-prev {
    left: 0;
    position: absolute;
    top: 0;
  }

  .controls-next {
    position: absolute;
    right: 0;
    top: 0;
  }

}

@media only screen and (min-width: 48em) {

  .heading-link {
    display: block;
  }

}

@media only screen and (min-width: 60em) {

  .wrapper {
    max-width: 50em;
  }

  .tutorial {
    padding-left: 1.5rem;
  }

  .tutorial ol {
    padding-left: 0;
  }

}

